# dense-rags

./: .gitignore  README.md  pyproject.toml
datasets/: README.md
datasets/bioasq/: download.py
datasets/books/: download.py  qa_prompt.txt
notebooks/: README.md  experiment.ipynb  synthetic_eval.ipynb  vector_store.ipynb
notebooks/experiment_bioasq/: experiment.ipynb  vector_store.ipynb
notebooks/experiment_books/: experiment.ipynb  synthetic_eval.ipynb  vector_store.ipynb
