[tool.poetry]
name = "rags"
version = "0.1.0"
description = "experiments with RAG"
authors = ["Manas <manas.gooner11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
