[tool.poetry]
name = "rags"
version = "0.1.0"
description = "experiments with RAG"
authors = ["Manas <manas.gooner11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
pandas = "^2.2.2"
jupyter = "^1.0.0"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-chroma = "^0.1.2"
chromadb = "^0.5.5"
langchain-openai = "^0.1.20"
openai = "^1.38.0"
ragas = "^0.1.12"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
